[package]
name = "aoc2023"
version = "0.1.0"
authors = ["Shrey Banga <banga.shrey@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.10.2"

[lib]

[[bin]]
name = "day1"

[[bin]]
name = "day2"

[[bin]]
name = "day3"